--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "moment-timezone": "^0.5.43",
     "mongoose": "^7.0.4",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "validator": "^13.9.0"
   }
 }
